syntax = "proto3";

package Video;

enum VideoPublishStatus {
  PENDING = 0;
  PROCESSING = 1;
  PROCESSED = 2;
  PUBLISHED = 3;
  FAILED = 4;
}

enum VideoVisibilityStatus {
  PRIVATE = 0;
  PUBLIC = 1;
  UNLISTED = 2;
}


message VideoCreateDto {
  string ownerId = 2;
  string title = 3;
  string videoFileUrl = 4;
  optional string description = 5;
  VideoPublishStatus videoPublishStatus = 6;
  VideoVisibilityStatus videoVisibilityStatus = 7;
}

message VideoFindDto {
  string id = 1;
}

message VideoUpdateDto {
  string id = 1;
  optional string title = 3;
  optional string videoFileUrl = 4;
  optional string description = 5;
  optional VideoPublishStatus videoPublishStatus = 6;
  optional VideoVisibilityStatus videoVisibilityStatus = 7;
}

message VideoPublishedResponse {
  string response = 1;
  string videoId = 2;
}

message VideoFoundResponse {
  string id = 1;
  string title = 2;
  string videoFileUrl = 3;
  optional string description = 4;
  VideoPublishStatus videoPublishStatus = 5;
  VideoVisibilityStatus videoVisibilityStatus = 6;
}

message VideosFoundResponse {
  repeated VideoFindDto videoFindDto = 1;
}

message VideoUpdatedResponse {
  string response = 1;
  string videoId = 2;
}

message Empty {}

message VideosHealthCheckRequest {
  string service = 1;
}

message VideosHealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service VideoService {
  rpc create(VideoCreateDto) returns (VideoPublishedResponse) {}
  rpc findOne(VideoFindDto) returns (VideoFoundResponse) {}
  rpc findAll(Empty) returns (VideosFoundResponse) {}
  rpc update(VideoUpdateDto) returns (VideoUpdatedResponse) {}
  rpc Check(VideosHealthCheckRequest) returns (VideosHealthCheckResponse) {}
}